# CNVScanner

./: INSTALL  Makefile.am  README  README.md  configure  configure.ac
SLMSeg/: DESCRIPTION  INDEX
SLMSeg/Meta/: Rd.rds  hsearch.rds  links.rds  nsInfo.rds  package.rds
SLMSeg/R/: SLMSeg.rdb  SLMSeg.rdx
SLMSeg/help/: AnIndex  SLMSeg.rdb  SLMSeg.rdx  aliases.rds  paths.rds
SLMSeg/html/: 00Index.html
connector/: Makefile  slmseg_connector.cpp  slmseg_connector.h  storage.h
lib/: data_structure.h  utility.c
resources/definition_files/: cnvscanner-v1.0.def  cnvscanner-v2.0.def
resources/dockerfiles/: Dockerfile-v1.0  Dockerfile-v2.0  Dockerfile_v1.0.fixmate.local.src  Dockerfile_v1.0_w_fixmate_tarball  run_cnvscannerv1.0_w_fixmate.sh
resources/dockerfiles/src/: CNVScanner_aws.py
resources/human_genome/hg37/: GRCh37_gc85_slop50.sorted.merged.bed  chrX.bed  hs37d5_N_regions_w_segdups_gt10k_tandem_rep_gt10k_sorted_merged.bed  hs37d5_autosome_only.bed
resources/human_genome/hg38/: GRCh38_gc85_slop50.sorted.merged.bed  hg38_Ns_regions_seg_dups_gt10k_tandem_rep_gt10k_sorted_merged.bed
slmseg/: Makefile  cctable.hpp  slmseg.cpp  slmseg.hpp
src/: Makefile  Makefile.am  analysis.c  analysis.h  breakpoints.c  breakpoints.h  calculate_stdev.c  calculate_stdev.h  cnv_segmentation.c  cnv_segmentation.h  excluded_regions.c  excluded_regions.h  fileProcessing.c  fileProcessing.h  improperly_paired_reads.c  improperly_paired_reads.h  main.c  reports.c  reports.h  stats.c  stats.h  std_cnv_calling.c  std_cnv_calling.h  terms.h  user_inputs.c  user_inputs.h  utils.c  utils.h
